deploiement/DDI-Access-Services/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddi-access-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddi-access-services
  template:
    metadata:
      labels:
        app: ddi-access-services
    spec:
      containers:
        - name: ddi-access-services
          image: inseefr/ddi-access-services:X.Y.Z
          volumeMounts:
            - name: config
              mountPath: /usr/local/tomcat/webapps/ddi-access-services.properties
              subPath: ddi-access-services.properties
      volumes:
        - name: config
          configMap:
            name: ddi-access-services-config
