deploiement/DDI-Access-Services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddi-access-services
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ddi-access-services.example.com
  rules:
    - host: ddi-access-services.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ddi-access-services
                port:
                  number: 8080
